--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -25,7 +25,7 @@ h3 {
 }
 
 h1 {
-  margin-left: 3%;
+  padding-top: 0.5em;
   font-size: 25px;
 }
 
@@ -47,7 +47,7 @@ h3 {
   z-index: 1;
   padding-right: 3%;
   padding-left: 3%;
-  font-size: 18px;
+  font-size: 20px;
   top: 0;
   left: 0;
   right: 0;
@@ -66,7 +66,7 @@ h3 {
 
 #navigation a {
   display: inline-block;
-  padding: 1.3em;
+  padding: 1.6em;
   text-decoration: none;
 }
 
@@ -84,7 +84,7 @@ a:hover {
   color: #8df4ca;
 }
 
-/*home*/
+/*index*/
 
 #reseaux {
   font-size: 18px;
@@ -96,13 +96,12 @@ a:hover {
 
 .contouring {
   margin: auto;
-  border: white;
   border: solid;
 }
 
 #mev-box {
-  width: 450px;
-  min-height: 450px;
+  width: 360px;
+  min-height: 360px;
 }
 
 #barre {
@@ -114,9 +113,13 @@ a:hover {
 #codebarre {
   position: relative;
   margin: 0 auto;
-  margin-top: 55%;
+  margin-top: 45%;
   width: 138px;
   min-height: 100px;
+}
+
+#index {
+  position: absolute;
 }
 
 /*about*/
@@ -137,9 +140,9 @@ a:hover {
 article {
   text-align: justify;
   padding: 10px;
-  margin: 10px;
+  margin: 22px;
   min-width: 374px;
-  line-height: 25px;
+  line-height: 28px;
   font-size: 18px;
   flex-grow: 1;
   flex-basis: 0;
@@ -147,15 +150,15 @@ article {
 
 section {
   justify-content: center;
-  padding-top: 200px;
+  padding-top: 180px;
   display: flex;
   flex-wrap: wrap;
 }
 
 #marie {
   position: absolute;
-  top: -150%;
-  left: 0;
+  top: -112%;
+  left: -55px;
   width: 100%;
 }
 
@@ -213,6 +216,12 @@ section {
 
 #traitb {
   margin-bottom: 0;
+}
+
+#fleche {
+  position: absolute;
+  top: 10em;
+  left: 48.5%;
 }
 
 /*contact*/
@@ -325,6 +334,14 @@ footer {
 
 .fixed {
   position: fixed;
+}
+
+.rotation90 {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 #responsiveMenu {
