--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -4,6 +4,11 @@
 * {
   color: white;
 }
+
+button:focus {
+  outline: 0;
+}
+
 body {
   background-color: #111111;
   margin: 0;
@@ -353,6 +358,18 @@ footer {
   right: 0;
   top: 0;
   bottom: 0;
+}
+
+#menuButton {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -40px;
+  right: 0;
+  background: #111;
+  margin: 0;
+  border: none;
+  z-index: 2;
 }
 
 .responsive {
