--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -199,42 +199,32 @@ section {
 /*work*/
 
 .bloc {
-  width: 360px;
-  height: 317px;
+  max-width: 360px;
   margin: 40px;
   border: white solid;
 }
 
-.fondimage {
-  width: 328px;
-  height: 257px;
-}
-
-.fondimage img {
+.cover {
+  display: flex;
+  width: 100%;
   -moz-transition: opacity 0.9s;
   -webkit-transition: opacity 0.9s;
   -o-transition: opacity 0.9s;
 }
-.fondimage img:hover {
+
+.cover > img {
+  width: 100%;
+}
+
+.cover:hover {
   opacity: 0.4;
   -moz-transition: opacity 0.7s;
   -webkit-transition: opacity 0.7s;
   -o-transition: opacity 0.7s;
 }
 
-#couv {
-  text-align: center;
-  position: relative;
-}
-
-#traitb {
+.traitb {
   margin: 0;
-}
-
-#fleche {
-  position: absolute;
-  top: 10em;
-  left: 45.5%;
 }
 
 /*contact*/
