--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -9,6 +9,11 @@ button:focus {
   outline: 0;
 }
 
+html,
+body {
+  height: 100vh;
+}
+
 body {
   background-color: #111111;
   margin: 0;
@@ -25,7 +30,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-weight: normal;
 }
 
@@ -44,18 +50,29 @@ h3 {
   margin-left: 3%;
 }
 
+h4 {
+  margin: 5% 0 2% 0;
+  text-align: center;
+  font-size: 20px;
+}
+
 /*menu*/
 
 #menu {
   background-color: #111111;
   border-bottom: 3px solid;
-  z-index: 1;
+  z-index: 10;
   padding-right: 3%;
   padding-left: 3%;
   font-size: 20px;
   top: 0;
   left: 0;
   right: 0;
+}
+
+#video {
+  margin-top: 9%;
+  width: 70%;
 }
 
 #navigation {
@@ -174,15 +191,12 @@ article {
 
 section {
   justify-content: center;
-  padding-top: 180px;
+  padding-top: 150px;
   display: flex;
   flex-wrap: wrap;
 }
 
 #marie {
-  position: absolute;
-  top: -112%;
-  left: -55px;
   width: 100%;
 }
 
@@ -195,6 +209,13 @@ section {
   top: 100%;
   left: 45%;
   width: 7%;
+}
+
+#insta {
+  padding: 10px 9px 0px 10px;
+  display: flex;
+  justify-self: center;
+  background-color: white;
 }
 
 /*work*/
@@ -240,27 +261,25 @@ section {
   position: relative;
 }
 
-#mev {
-  position: absolute;
-  right: 80%;
-  top: -60px;
+#carte {
+  width: 45%;
 }
 
-#at {
-  position: absolute;
-  top: 35%;
-  left: 14%;
-}
-
-#diese {
-  position: absolute;
-  top: -8%;
-  right: 8%;
+#bande {
+  margin-top: 4%;
+  width: 100%;
+  border-top: white solid;
+  border-bottom: white solid;
+  font-size: 15px;
+  padding: 10px;
+  word-spacing: 2px;
+  line-height: 12px;
 }
 
 /*footer*/
 
 #footer {
+  z-index: 1000000;
   position: fixed;
   width: 100%;
 }
@@ -282,12 +301,14 @@ section {
 }
 
 .page-container {
+  height: 100%;
   position: relative;
 }
 
 /*footer*/
 
 footer {
+  border-top: white solid;
   background-color: #111;
   position: absolute;
   bottom: 0;
@@ -392,6 +413,19 @@ footer {
     flex-direction: row;
   }
 
+  #carte {
+    width: 58%;
+  }
+
+  #bande {
+    margin-top: 12%;
+  }
+
+  #video {
+    margin-top: 0;
+    width: 190%;
+  }
+
   .responsive-hidden {
     display: none;
   }
@@ -406,6 +440,18 @@ footer {
   }
 
   #logo {
+    width: 80%;
+  }
+
+  h4 {
+    margin: 5% 0 5% 0;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  #insta {
+    padding: 2px 3px 3px 3px;
+    background-color: white;
     width: 80%;
   }
 }
