--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -71,9 +71,14 @@ h4 {
 }
 
 #video {
+  display: block;
   overflow: hidden;
   margin-top: 9%;
   width: 70%;
+}
+
+#gifvideo {
+  display: none;
 }
 
 #navigation {
@@ -423,8 +428,11 @@ footer {
   }
 
   #video {
-    margin-top: 0;
-    width: 190%;
+    display: none;
+  }
+
+  #gifvideo {
+    display: block;
   }
 
   .responsive-hidden {
