--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,7 +178,6 @@ input, select, textarea {
 		color: #000000;
 		font-weight: 600;
 		line-height: 1.65;
-		margin: 0 0 1em 0;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -3340,4 +3339,6 @@ input, select, textarea {
 			visibility: visible;
 		}
 
-		
+	
+
+/* gif contact */
